--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p></p>
     <!-- /wp:paragraph --></div></div>
     <!-- /wp:cover -->
+
+    <h1>Hey, this is a new branch</h1>
     
     <!-- wp:spacer {"height":64} -->
     <div style="height:64px" aria-hidden="true" class="wp-block-spacer"></div>
