--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <title>FloralHobbies</title>
 <!-- wp:cover {"url":"https://anespinola.files.wordpress.com/2021/07/the-creative-exchange-4tcra93ibvo-unsplash.jpeg","id":37,"dimRatio":100,"minHeight":100,"minHeightUnit":"vh","customGradient":"linear-gradient(0deg,rgba(255,255,255,0) 0%,rgb(149,119,147) 100%)","contentPosition":"center center","align":"full","className":"is-style-default"} -->
+<head>
+<!-- Hotjar Tracking Code for www.anespinola.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2514473,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+</head>
 <div class="wp-block-cover alignfull has-background-dim-100 has-background-dim has-background-gradient is-style-default" style="min-height:100vh"><span aria-hidden="true" class="wp-block-cover__gradient-background" style="background:linear-gradient(0deg,rgba(255,255,255,0) 0%,rgb(149,119,147) 100%)"></span><img class="wp-block-cover__image-background wp-image-37" alt="" src="https://anespinola.files.wordpress.com/2021/07/the-creative-exchange-4tcra93ibvo-unsplash.jpeg" data-object-fit="cover"/><div class="wp-block-cover__inner-container"><!-- wp:heading {"textAlign":"center","level":1,"className":"margin-bottom-half"} -->
     <h1 class="has-text-align-center margin-bottom-half">The Art</h1>
     <!-- /wp:heading -->
